# TwinOps

./: .gitignore  .gitleaks.toml  LICENSE  README.md  codecov.yml  docker-compose.basyx.yml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  auto-assign.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  docker-publish.yml  performance.yml  pr-checks.yml  release.yml  security.yml
demo/: Dockerfile  index.html  package.json
demo/src/: TwinOpsDemo.jsx  main.jsx
deploy/k8s/: agent.yaml  configmap.yaml  kustomization.yaml  mqtt.yaml  namespace.yaml  networkpolicy.yaml  opservice.yaml  sandbox.yaml  secrets.yaml
docker/agent/: Dockerfile
docker/opservice/: Dockerfile
docker/sandbox/: Dockerfile
infra/mosquitto/: mosquitto.conf
models/: sample_aas_env.json
scripts/: generate_policy_keypair.py  load_test_agent.py  sign_policy.py  verify_production_readiness.sh
src/twinops/: __init__.py  cli.py
src/twinops/agent/: __init__.py  capabilities.py  main.py  orchestrator.py  policy_signing.py  safety.py  schema_gen.py  shadow.py  twin_client.py
src/twinops/agent/llm/: __init__.py  base.py  factory.py  openai_compat.py  rules.py
src/twinops/common/: __init__.py  auth.py  basyx_topics.py  errors.py  hmac.py  http.py  idempotency.py  idempotency_sqlite.py  logging.py  metrics.py  mqtt.py  ratelimit.py  settings.py  tracing.py
src/twinops/opservice/: __init__.py  main.py
src/twinops/sandbox/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_basyx_topics.py  test_capabilities.py  test_llm_circuit_breaker.py  test_llm_rules.py  test_mqtt_client.py  test_opservice_cleanup.py  test_orchestrator.py  test_policy_signing.py  test_ratelimit.py  test_safety.py  test_sandbox_routes.py  test_schema_gen.py  test_shadow.py  test_twin_client.py
