[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twinops"
version = "1.0.0"
description = "Production-Grade AI Agents for BaSyx Digital Twins"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "RWTH Aachen University", email = "ias@rwth-aachen.de" }
]
keywords = [
    "digital-twin",
    "aas",
    "asset-administration-shell",
    "basyx",
    "ai-agents",
    "industrial-automation",
    "mqtt",
    "llm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "aiohttp>=3.9.0",
    "aiomqtt>=2.0.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "cryptography>=41.0.0",
    "scikit-learn>=1.3.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "structlog>=24.1.0",
    "uvicorn>=0.25.0",
    "starlette>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "pre-commit>=3.6.0",
]
basyx = [
    "basyx-python-sdk>=2.0.0",
]

[project.scripts]
twinops = "twinops.cli:main"
twinops-agent = "twinops.agent.main:main"
twinops-sandbox = "twinops.sandbox.main:main"
twinops-opservice = "twinops.opservice.main:main"

[project.urls]
Homepage = "https://github.com/rwth-ias/twinops"
Documentation = "https://twinops.readthedocs.io"
Repository = "https://github.com/rwth-ias/twinops"
Issues = "https://github.com/rwth-ias/twinops/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/twinops"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["twinops"]
